New image, spacing adjustments made throughout site and some additional animations

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 05:57:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 08:54:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -16,16 +16,7 @@
   <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
 </head>
 <body class="ryu_body">
-  <div id="Hero" class="hero_section">
-    <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
-        <source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true">
-        <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
-      </video>
-      <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic</h1>
-      <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
-      <a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
-    </div>
-  </div>
+  <div id="Hero" class="hero_section"></div>
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
       <div>
@@ -39,10 +30,18 @@
         <a href="testimonials.html" class="nav_link w-nav-link">Testimonials</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
+  </div>
+  <div data-poster-url="videos/ryu_acupuncture_hero-poster-00001.jpg" data-video-urls="videos/ryu_acupuncture_hero-transcode.mp4,videos/ryu_acupuncture_hero-transcode.webm" data-autoplay="true" data-loop="true" data-wf-ignore="true" class="background-video w-background-video w-background-video-atom"><video autoplay="" loop="" style="background-image:url(&quot;videos/ryu_acupuncture_hero-poster-00001.jpg&quot;)" muted="" playsinline="" data-wf-ignore="true" data-object-fit="cover">
+      <source src="videos/ryu_acupuncture_hero-transcode.mp4" data-wf-ignore="true">
+      <source src="videos/ryu_acupuncture_hero-transcode.webm" data-wf-ignore="true">
+    </video>
+    <h1 data-w-id="3f244832-e3f0-0b4b-02c0-cd924a20215a" style="-webkit-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(-50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_title">Ryu Acupuncture Clinic</h1>
+    <h2 data-w-id="3c285d6e-79d6-4a3e-5490-860b317ec41c" style="-webkit-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(50PX, 0, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="ryu_tagline">&quot;Wellness is a Journey&quot;</h2>
+    <a data-w-id="0c17420e-eef8-af9a-4840-bcd529904723" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" href="contact.html" class="ryu_button_schedule w-button"><strong>SCHEDULE NOW</strong></a>
   </div>
   <div id="About" class="about_section">
     <div class="main_container">
@@ -72,13 +71,13 @@
           <h2 class="section_h2_left">Hospital clean office with Covid-19 adherences</h2>
           <p>We take pride in keeping our office hospital clean while meeting and exceeding Covid-19 protocols. Treatment rooms are thoroughly sterilized after each patient. Our staff wears face masks at all times and we offer hand in the receptions area as well as the treatment rooms for patient use. We adamantly adhere to the CDC guidelines to ensure that health of our patients are never in jeopardy.</p>
         </div>
-        <div class="_360_frame_block">
+        <div data-w-id="bcd27994-ddcf-2e98-a30f-12638afa79cd" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
           <div class="ryu_360_block w-embed w-iframe"><iframe src="https://www.google.com/maps/embed?pb=!4v1601787402564!6m8!1m7!1sCAoSLEFGMVFpcE5keFd3ejdmWElESXZEWUlSWFFUVnY4MUJtSFBqemtCazd3TUpH!2m2!1d34.15229581276014!2d-118.341232649982!3f20!4f0!5f0.7820865974627469" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe></div>
         </div>
       </div>
       <div class="_2_block_row">
-        <div class="_360_frame_block">
-          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="" class="image-2"></a>
+        <div data-w-id="058240cb-5cb0-a0b3-8ec6-6bc7cefed0ad" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_360_frame_block">
+          <a href="#" class="lightbox-link w-inline-block w-lightbox"><img src="images/woman_happy_with_results.jpg" loading="lazy" sizes="(max-width: 479px) 86vw, (max-width: 767px) 87vw, (max-width: 991px) 43vw, (max-width: 1279px) 48vw, 580px" srcset="images/woman_happy_with_results.jpg 1080w, images/woman_happy_with_results.jpg 1600w, images/woman_happy_with_results.jpg 1920w" alt="" class="image-2"></a>
         </div>
         <div class="_2_block">
           <div class="block_text_pre_h2_left">RESULTS MATTER</div>
@@ -94,21 +93,21 @@
           </div>
           <div class="featured_number_wrapper">
             <div class="circle_wrapper">
-              <div class="circle_div">
+              <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f742" style="opacity:0" class="circle_div">
                 <h4 class="counter">110</h4>
                 <div class="circle_titles">5 Star Reviews</div>
               </div>
             </div>
             <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow-image"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="" class="arrow-image-mobile"></div>
             <div class="circle_wrapper">
-              <div class="circle_div">
+              <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f74b" style="opacity:0" class="circle_div">
                 <h1 class="counter">13,323</h1>
                 <div class="circle_titles">Repeat Visits</div>
               </div>
             </div>
             <div class="arrow_wrapper"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d685d548b84e_arrow-right.svg" alt="" class="arrow_image_right"><img src="https://uploads-ssl.webflow.com/60796883a472d6a92d48b7ee/60796884a472d675d748b853_arrow-down.svg" alt="" class="arrow-image-mobile-left"></div>
             <div class="circle_wrapper">
-              <div class="circle_div">
+              <div data-w-id="198e2a90-b059-e723-d8dc-976fd602f754" style="opacity:0" class="circle_div">
                 <h1 class="counter">6</h1>
                 <div class="circle_titles">Awards</div>
               </div>
@@ -118,7 +117,7 @@
       </div>
       <div class="_2_block_row">
         <div class="_2_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" alt="The Bank of the West building in Burbank, where Ryu Acupuncture Clinic is located">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/outside_of_ryu_acupuncture.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="34c46542-9256-1bd6-539b-712ff6414399" alt="The Bank of the West building in Burbank, where Ryu Acupuncture Clinic is located">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -211,7 +210,7 @@
           </a>
         </div>
         <div data-w-id="df406cd4-04cc-1944-6f8d-e388251aeeb1" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_mother_and_little_girl.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 17vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_mother_and_little_girl-p-500.jpeg 500w, images/dr_jay_ryu_with_mother_and_little_girl.jpg 1000w" alt="Dr. Jay Ryu with a joyful mother and daughter" class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -229,7 +228,7 @@
           </a>
         </div>
         <div data-w-id="de84c0e4-ec70-3f60-4b12-ddf9380fb606" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_husband_and_wife.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 17vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_husband_and_wife-p-500.jpeg 500w, images/dr_jay_ryu_with_husband_and_wife.jpg 750w" alt="Dr. Jay Ryu with a delighted couple." class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
@@ -247,7 +246,7 @@
           </a>
         </div>
         <div data-w-id="fe148618-67c7-622d-53e9-ec75c71c7c62" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_5_block_right">
-          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 15vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image">
+          <a href="#" class="gallery_lightbox_link w-inline-block w-lightbox"><img src="images/dr_jay_ryu_with_happy_mother.jpg" loading="lazy" sizes="(max-width: 479px) 90vw, (max-width: 767px) 17vw, (max-width: 991px) 16vw, (max-width: 1279px) 18vw, 219px" srcset="images/dr_jay_ryu_with_happy_mother-p-500.jpeg 500w, images/dr_jay_ryu_with_happy_mother-p-800.jpeg 800w, images/dr_jay_ryu_with_happy_mother-p-1080.jpeg 1080w, images/dr_jay_ryu_with_happy_mother.jpg 1200w" alt="Dr. Jay Ryu with a satisfied patient after treatment." class="gallery_image">
             <script type="application/json" class="w-json">{
   "items": [
     {
