--- a/testimonials.html
+++ b/testimonials.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 05:57:16 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 08:54:25 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69afbf9248faad839a72a1" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -29,7 +29,7 @@
         <a href="testimonials.html" aria-current="page" class="nav_link w-nav-link w--current">Testimonials</a>
         <a href="contact.html" class="nav_link w-nav-link">Contact</a>
       </nav>
-      <div class="w-nav-button">
+      <div class="menu-button w-nav-button">
         <div class="w-icon-nav-menu"></div>
       </div>
     </div>
