--- a/team.html
+++ b/team.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 08:54:25 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 22:38:26 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
 <head>
   <meta charset="utf-8">
@@ -13,7 +13,33 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script>
+  <script src="https://www.google.com/recaptcha/api.js" type="text/javascript"></script><!--  Start of Async Drift Code  -->
+  <script>
+"use strict";
+!function() {
+  var t = window.driftt = window.drift = window.driftt || [];
+  if (!t.init) {
+    if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
+    t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+    t.factory = function(e) {
+      return function() {
+        var n = Array.prototype.slice.call(arguments);
+        return n.unshift(e), t.push(n), t;
+      };
+    }, t.methods.forEach(function(e) {
+      t[e] = t.factory(e);
+    }), t.load = function(t) {
+      var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
+      o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
+      var i = document.getElementsByTagName("script")[0];
+      i.parentNode.insertBefore(o, i);
+    };
+  }
+}();
+drift.SNIPPET_VERSION = '0.3.1';
+drift.load('r73nxaxiv89c');
+</script>
+  <!--  End of Async Drift Code  -->
 </head>
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
@@ -47,14 +73,14 @@
         </div>
       </div>
       <div class="_2_block_row margin_bottom">
-        <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557035" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/veronica_ryu.jpg" loading="lazy" alt="" class="bio_img"></div>
+        <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557035" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/veronica_ryu.jpg" loading="lazy" alt="Veronica Ryu in the office." class="bio_img"></div>
         <div data-w-id="99cbef90-9d54-49a2-9b11-65670f557037" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Veronica Ryu, L.Ac.</h2>
           <p class="bio_para">Veronica is a board certified acupuncturist and focuses on synergy of the mind and body. With her skills in traditional acupuncture, hand acupuncture, and herbal medicine, she has a strong motivation for women’s health, mental health, and daily functioning of overall wellness. She has a background working with fertility, pain, autoimmune conditions, cancer, and many other chronic conditions.<br><br>Veronica has received the top 10 student award numerous times and continues to be a student of life and medicine. She vehemently pursues her passion in creating a deeper understanding of that strange link between the human mind and energy.</p>
         </div>
       </div>
       <div class="_2_block_row margin_top">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="100vw" alt="" class="bio_img"></div>
+        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea6714999" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/jennifer_ryu.jpg" loading="lazy" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="70f7b243-a42b-5465-f4ce-2bbea671499a" srcset="images/jennifer_ryu-p-500.jpeg 500w, images/jennifer_ryu-p-800.jpeg 800w, images/jennifer_ryu-p-1080.jpeg 1080w, images/jennifer_ryu-p-1600.jpeg 1600w, images/jennifer_ryu.jpg 1920w" sizes="100vw" alt="Jennifer Ryu in the office." class="bio_img"></div>
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671498c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Jennifer Ryu, L.Ac.</h2>
           <p class="bio_para">Jennifer followed into her father’s footsteps and has adopted the approach of treating the root causes and following the journey to wellness. She is board certified and uses traditional acupuncture, Korean hand acupuncture, auricular acupuncture, herbal medicine and many other techniques and modalities. She has a background working in autoimmune conditions, cancer, fertility, pain, and many other chronic conditions.<br><br>In her current enrollment of her Doctorate program, she is furthering her area of interest in fertility to women of and beyond the primal reproductive years. Her goal is to create a simpler understanding or dialogue to bridge the gap between and Eastern and Western medicine.</p>
@@ -161,5 +187,6 @@
   <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5f686908b6be43eb4fb09bd7" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
   <script src="js/ryu-acupuncture.js" type="text/javascript"></script>
   <!-- [if lte IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif] -->
+  <script>(function(d){var s = d.createElement("script");s.setAttribute("data-account", "sqrqTDIVSg");s.setAttribute("src", "https://cdn.userway.org/widget.js");(d.body || d.head).appendChild(s);})(document)</script><noscript>Please ensure Javascript is enabled for purposes of <a href="https://userway.org">website accessibility</a></noscript>
 </body>
 </html>
