More adjustments across the site for ADA compliance

--- a/401.html
+++ b/401.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 22:38:26 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f75c2fc0235e6eb492cbd63" data-wf-site="5f686908b6be43eb4fb09bd7">
+<!DOCTYPE html><!--  Last Published: Tue Apr 27 2021 07:21:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5f75c2fc0235e6eb492cbd63" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Protected page</title>
