--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 22:38:26 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7">
+<!DOCTYPE html><!--  Last Published: Tue Apr 27 2021 07:21:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Services | Ryu Acupuncture Clinic, Inc</title>
@@ -44,8 +44,10 @@ drift.load('r73nxaxiv89c');
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+      <div class="brand_block">
+        <a href="index.html" class="link-block w-inline-block">
+          <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+        </a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -78,37 +80,37 @@ drift.load('r73nxaxiv89c');
     <div class="column-2">
       <div class="content-holder">
         <div class="the-content _1">
-          <h1 class="services_content_h3">Acupuncture</h1>
+          <h2 class="services_content_h3">Acupuncture</h2>
           <p class="services_para">Acupuncture involves the insertion of very thin needles through your skin at strategic points on your body. A key component of traditional Chinese medicine, acupuncture is most commonly used to treat pain. Increasingly, it is being used for overall wellness, including stress management.</p>
           <p class="services_para">Traditional Chinese medicine explains acupuncture as a technique for balancing the flow of energy or life force — known as chi or qi (chee) — believed to flow through pathways (meridians) in your body. By inserting needles into specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
           <p class="services_para">In contrast, many Western practitioners view the acupuncture points as places to stimulate nerves, muscles and connective tissue. Some believe that this stimulation boosts your body&#x27;s natural painkillers.<br></p>
         </div>
         <div style="opacity:0" class="the-content _2">
-          <h1 class="services_content_h3">Traditional Chinese Herbs</h1>
+          <h2 class="services_content_h3">Traditional Chinese Herbs</h2>
           <p class="services_para">For centuries, China and other Asian countries have embraced herbal therapy. Now, the West is catching on to the timelessness of this ancient medicine and has started to incorporate Chinese herbs in the treatment of a wide range of health concerns.</p>
           <p class="services_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
           <p class="services_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
         </div>
         <div style="opacity:0" class="the-content _3">
-          <h1 class="services_content_h3">Cupping</h1>
+          <h2 class="services_content_h3">Cupping</h2>
           <p class="services_para">During a cupping session, a practitioner places round cups directly on your skin. The cup is either first heated with fire or manually pumped to create a suction. The cups are then left on your skin for several minutes.</p>
           <p class="services_para">Cupping became part of the mainstream conversation during the 2016 Summer Olympics, when swimmer Michael Phelps showed up to compete with round bruises covering his back.</p>
           <p class="services_para">And although it has soared in popularity recently, cupping has been around for thousands of years and traces its roots to ancient Chinese and Egyptian medicine. Cupping was documented in one of the oldest medical textbooks in the world, <em>Ebers Papyrus</em>, which was written in 1550 BC.</p>
         </div>
         <div style="opacity:0" class="the-content _4">
-          <h1 class="services_content_h3">Auriculotherapy</h1>
+          <h2 class="services_content_h3">Auriculotherapy</h2>
           <p class="services_para">Auriculotherapy is a form of medicine based on the idea that the ear is a micro system, which reflects the entire body, represented on the auricle, the outer portion of the ear. Conditions affecting the physical, mental or emotional health of the patient are assumed to be treatable by stimulation of the ear exclusively.</p>
           <p class="services_para">When a person has pain in a certain part of the body for instance, the reflect point in the ear&#x27;s microsystem will present a difference in the electric potential as opposed to the rest of the adjacent areas. It is quite possible for that part to be painful as well. on pressure.</p>
           <p class="services_para">Since Auriculotherapy is part of Traditional Chinese Medicine, once we complete the diagnostic assessment and differentiation of syndromes, the process of stimulation certain parts of the ear may begin. Stimulation may be carries out in various ways: applying massage using finders, applying adhesive Vaccaria seeds (ear seeds), performing auricular acupuncture, moxibustion, electro-stimulation or even infra-red light.</p>
         </div>
         <div style="opacity:0" class="the-content _5">
-          <h1 class="services_content_h3">Moxibustion</h1>
+          <h2 class="services_content_h3">Moxibustion</h2>
           <p class="services_para">Moxibustion is a form of heat therapy in which dried plant materials called &quot;moxa&quot; are burned on or very near the surface of the skin. The intention is to warm and invigorate the flow of Qi or Chi in the body and dispel certain pathogenic influences.</p>
           <p class="services_para">In traditional Chinese medicine, stimulating the flow of chi is considered essential to achieving health and wellness. In fact, this approach to healthcare is based on the belief that blockages in the flow of chi contribute to physical and mental health problems.</p>
           <p class="services_para">Because fire (<em>yang</em>) is its central element, moxibustion is most often used to dispel cold stagnation (<em>yin</em>) and the conditions that arise as a result. Common problems from a Western medicine lens that may be loosely associated with cold stagnation include:</p>
         </div>
         <div style="opacity:0" class="the-content _6">
-          <h3 class="services_content_h3">Heat Therapy</h3>
+          <h2 class="services_content_h3">Heat Therapy</h2>
           <p class="services_para">Heat therapy is often used during a treatment to help warm the body, increase circulation, and induce a state of deep relaxation using a far-infrared heating device known as a TDP lamp. The light emissions penetrate deeply and accelerate healing in the body which increases flexibility, range of motion and decreases pain and inflammation. It may also help with digestive function, eliminating water and toxic substances, and strengthening the immune system.</p>
           <p class="services_para">Use of the TDP lamp will loosen the tendons, muscles and fascia to allow an increase in blood flow to the area. Increased blood flow will help loosen the muscles and within the blood there are immune chemicals which will decrease inflammation and ultimately decrease a recurrence of tightness while healing the condition. The lamp also contains a mineral plate which helps arthritic conditions.</p>
         </div>
