--- a/team.html
+++ b/team.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 22:38:26 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7">
+<!DOCTYPE html><!--  Last Published: Tue Apr 27 2021 07:21:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5f68aaf0aa962780bdc97355" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Our Team | Acupuncturists| Ryu Acupuncture Clinic, Inc</title>
@@ -44,8 +44,10 @@ drift.load('r73nxaxiv89c');
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+      <div class="brand_block">
+        <a href="index.html" class="link-block w-inline-block">
+          <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+        </a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -66,7 +68,7 @@ drift.load('r73nxaxiv89c');
       <p class="solo_para">Our clinic is proudly family-owned and operated. Each member of our team brings different traits, skill sets, characteristics and specialties to the office - which makes us quite unique and more than capable of handling a wide-variety of different ailments. We are constantly working on improving our skills, keeping up with the latest medical information available and honing our technique. We welcome you to learn a bit more about each member of our team, our family.</p>
       <div class="blue_divide"></div>
       <div class="_2_block_row margin_bottom">
-        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" sizes="100vw" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" alt="" class="bio_img"></div>
+        <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497c" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_35_block margin_right"><img src="images/dr_ryu.jpg" loading="lazy" sizes="100vw" srcset="images/dr_ryu-p-800.jpeg 800w, images/dr_ryu.jpg 921w" alt="Jay Ryu in the office." class="bio_img"></div>
         <div data-w-id="70f7b243-a42b-5465-f4ce-2bbea671497e" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" class="_65_block margin_left">
           <h2 class="section_h2_left">Dr. Jay Ryu, L.Ac., Ph.D</h2>
           <p class="bio_para">Ryu Acupuncture Clinic first opened in 1997 in Burbank, California.<br><br>Dr. Jay J. Ryu, L.Ac, Ph.D. is a licensed acupuncturist and herbalist.  He holds a Ph.D. from the prestigious Yuin University and earned a Masters degree in Traditional Oriental Medicine from the renowned Dongguk Royal University where he was a professor in Oriental Medicine.<br><br>He serves as a core member of the Hongik Oriental Medical Association with extensive research in Oriental Medicine and Herbology.  Dr. Ryu has also been a continuing education instructor for acupuncturists.<br><br>He is fluent in both English and Korean. Dr. Ryu has glowing success in issues regarding infertility, allergies, asthma, facial rejuvenation, pain management, and female issues. </p>
