--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 22:38:26 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7">
+<!DOCTYPE html><!--  Last Published: Tue Apr 27 2021 07:21:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5f69afc5b29e53f4b7461193" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Contact</title>
@@ -44,8 +44,10 @@ drift.load('r73nxaxiv89c');
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+      <div class="brand_block">
+        <a href="index.html" class="link-block w-inline-block">
+          <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+        </a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -70,7 +72,7 @@ drift.load('r73nxaxiv89c');
         </div>
         <div class="_2_block margin_left">
           <div class="form-block w-form">
-            <form id="wf-form-Website-Inquiry---Contact-Page-Form" name="wf-form-Website-Inquiry---Contact-Page-Form" data-name="Website Inquiry - Contact Page Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="Phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
+            <form id="wf-form-Website-Inquiry---Contact-Page-Form" name="wf-form-Website-Inquiry---Contact-Page-Form" data-name="Website Inquiry - Contact Page Form" data-w-id="6df80a4d-3aac-723a-9665-be140689882d" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0"><label for="name">Name</label><input type="text" class="w-input" maxlength="256" name="name" data-name="Name" placeholder="Enter your name" id="name" required=""><label for="Phone">Phone Number</label><input type="tel" class="w-input" maxlength="256" name="Phone" data-name="Phone" placeholder="Enter your phone number" id="phone" required=""><label for="email">Email Address</label><input type="email" class="w-input" maxlength="256" name="email" data-name="Email" placeholder="Enter your email" id="email" required=""><label for="email">Message</label><textarea placeholder="Describe the condition you would like treated" maxlength="5000" id="field" name="field" required="" data-name="Field" class="w-input"></textarea>
               <div data-sitekey="6LcLHM8ZAAAAAPB17IxJJh-pdPI1W-H__dy9C5-R" class="w-form-formrecaptcha g-recaptcha g-recaptcha-error g-recaptcha-disabled"></div><input type="submit" value="SUBMIT" data-wait="Please wait..." class="submit-button w-button">
             </form>
             <div class="success-message-2 w-form-done">
