--- a/privacy.html
+++ b/privacy.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html><!--  Last Published: Mon Apr 26 2021 22:38:26 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="5f75a0efe24b373e47ab1ed5" data-wf-site="5f686908b6be43eb4fb09bd7">
+<!DOCTYPE html><!--  Last Published: Tue Apr 27 2021 07:21:37 GMT+0000 (Coordinated Universal Time)  -->
+<html data-wf-page="5f75a0efe24b373e47ab1ed5" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
   <title>Privacy</title>
@@ -44,8 +44,10 @@ drift.load('r73nxaxiv89c');
 <body class="ryu_body">
   <div data-collapse="medium" data-animation="default" data-duration="400" role="banner" class="navbar w-nav">
     <div class="menu_container">
-      <div>
-        <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+      <div class="brand_block">
+        <a href="index.html" class="link-block w-inline-block">
+          <h3 class="nav_bar_h3">Ryu Acupuncture Clinic</h3>
+        </a>
       </div>
       <nav role="navigation" class="nav-menu w-nav-menu">
         <a href="index.html" class="nav_link w-nav-link">Home</a>
@@ -195,7 +197,7 @@ drift.load('r73nxaxiv89c');
   <div id="privacy_section_10" class="privacy_section_10">
     <div class="main_container">
       <h2 class="legal_h2">9. WHAT ARE YOUR PRIVACY RIGHTS?</h2>
-      <p class="legal_para"><strong><em>In Short:</em></strong><em>  You may review, change, or terminate your account at any time.<br><br>‍</em>If you are a resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. You can find their contact details <a href="http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm" class="blue_link">here</a>.<a href="#" class="blue_link"><br></a><br>If you are a resident in Switzerland, the contact details for the data protection authorities are available <a href="https://www.edoeb.admin.ch/edoeb/en/home.html" class="blue_link">here</a>.<br>‍<strong><br>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Website.</p>
+      <p class="legal_para"><strong><em>In Short:</em></strong><em>  You may review, change, or terminate your account at any time.<br><br>‍</em>If you are a resident in the European Economic Area and you believe we are unlawfully processing your personal information, you also have the right to complain to your local data protection supervisory authority. <a href="http://ec.europa.eu/justice/data-protection/bodies/authorities/index_en.htm" class="blue_link">You can find their contact detail here</a>.<br><br>If you are a resident in Switzerland, the <a href="https://www.edoeb.admin.ch/edoeb/en/home.html" class="blue_link">contact details for the data protection authorities are available .</a><br>‍<strong><br>Cookies and similar technologies:</strong> Most Web browsers are set to accept cookies by default. If you prefer, you can usually choose to set your browser to remove cookies and to reject cookies. If you choose to remove cookies or reject cookies, this could affect certain features or services of our Website.</p>
     </div>
   </div>
   <div id="privacy_section_11" class="privacy_section_11">
