Minor corrections to the conditions treated page

--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Apr 27 2021 19:50:03 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Wed Apr 28 2021 04:48:30 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -68,11 +68,11 @@ drift.load('r73nxaxiv89c');
       <h1 class="section_h1">Conditions Treated</h1>
       <p class="solo_para">Modern medicine has many pitfalls such as overprescribed medications, unnecessary surgeries and symptomatic treatments that don&#x27;t achieve long-term results. Traditional Chinese Medicine is often times a better solution for treatment of chronic conditions and has many positive side effects such as improving the quality of life. According to the National Institutes of Health, <a href="https://www.nccih.nih.gov/health/traditional-chinese-medicine-what-you-need-to-know" class="blue_link">Traditional Chinese Medicine (TCM)</a> is a complete medical system that treats a wide range of conditions including, but not limited to:</p>
       <div class="_2_block_row_ailment_right">
-        <div data-w-id="18fc1319-c4f4-a476-ea5f-69382d118ce6" class="muscoskeletal_block">
+        <div data-w-id="18fc1319-c4f4-a476-ea5f-69382d118ce6" class="musculoskeletal_block">
           <div class="services_mask_left"></div>
         </div>
         <div data-w-id="76b6cc94-f91a-84b4-4f11-d84595d36d22" class="_2_block_middle">
-          <h2 class="ailment_h2">MUSCOSKELETAL</h2>
+          <h2 class="ailment_h2">MUSCULOSKELETAL</h2>
           <div class="_3_block_row">
             <div class="_3_block">
               <ul role="list" class="ailment_list w-list-unstyled">
@@ -214,7 +214,7 @@ drift.load('r73nxaxiv89c');
             </div>
           </div>
         </div>
-        <div data-w-id="44cc6f87-4d19-6d2a-4a73-1c0f15bb5af9" class="ent_block">
+        <div data-w-id="be016694-d011-21f4-a67c-e0fe1710b5c5" class="respitory_block">
           <div class="services_mask_right"></div>
         </div>
       </div>
@@ -283,7 +283,7 @@ drift.load('r73nxaxiv89c');
             </div>
           </div>
         </div>
-        <div data-w-id="be016694-d011-21f4-a67c-e0fe1710b5c5" class="respitory_block">
+        <div data-w-id="44cc6f87-4d19-6d2a-4a73-1c0f15bb5af9" class="ent_block">
           <div class="services_mask_right"></div>
         </div>
       </div>
