Adjusted a link to external site from the home page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Wed Apr 28 2021 06:10:17 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Thu Apr 29 2021 06:21:37 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -169,7 +169,9 @@ drift.load('r73nxaxiv89c');
           <h2 class="section_h2_left">Easily accessible and within minutes of major freeways</h2>
           <p>Our address is 3808 W. Riverside Dr. in the beautiful city of Burbank, California. We are conveniently located within the Bank of the West building, nestled between the Warner Bros., Walt Disney and Burbank Studios. We&#x27;re just South of the 134 Ventura Freeway and minutes from the 101, 170 and 5 freeways. Our office is located on the 5th floor in suite #510.<br></p>
           <div class="div-block">
-            <p>Need directions? <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="link">Click here</a><br></p>
+            <p>
+              <a href="https://www.google.com/maps/place/3808+W+Riverside+Dr,+Burbank,+CA+91505/@34.1523337,-118.3432475,17z/data=!3m1!4b1!4m8!1m2!2m1!1s3808+W.+Riverside+Dr!3m4!1s0x80c2bfcc17e29199:0x8c16f2e46cae7e94!8m2!3d34.1523293!4d-118.3410588" class="blue_link">Need directions? Click here.</a>
+            </p>
             <div data-w-id="e86a3abe-770f-bfa9-be83-0a90d1d478c5" data-animation-type="lottie" data-src="documents/blue_arrow.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="1.1333333333333333" data-duration="0" class="lottie-animation-2"></div>
           </div>
           <div class="_2_block_row_mini">
