Added lottie file for 404 page, changed out two of the desktop verison service section copy

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Apr 29 2021 20:20:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat May 01 2021 05:30:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f686908b6be431abfb09bd8" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -330,7 +330,7 @@ drift.load('r73nxaxiv89c');
           <p class="cards_para">Ear acupuncture, or auriculotherapy, is a form of medicine based on the notion that the ear is a micro system that reflects the body. The auricle, or outer portion of the ear, is where treatment is performed.</p>
         </div>
         <div id="w-node-a5855f2e-be73-11df-a01b-7dade4327f15-bfb09bd8" class="card_block">
-          <div class="crads_img_mask"><img src="images/hand_moxa.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f17" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/hand_moxa.jpg 500w, images/hand_moxa.jpg 569w" alt="Moxabustion coals" class="cards_img"></div>
+          <div class="crads_img_mask"><img src="images/hand_moxa.jpg" style="-webkit-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 50PX, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);opacity:0" data-w-id="a5855f2e-be73-11df-a01b-7dade4327f17" sizes="(max-width: 479px) 100vw, (max-width: 767px) 90vw, (max-width: 991px) 29vw, (max-width: 1439px) 28vw, 373.328125px" srcset="images/hand_moxa-p-500.jpeg 500w, images/hand_moxa.jpg 569w" alt="Moxabustion coals" class="cards_img"></div>
           <h3 id="w-node-a5855f2e-be73-11df-a01b-7dade4327f18-bfb09bd8" class="card_h3">Moxibustion</h3>
           <p id="w-node-a5855f2e-be73-11df-a01b-7dade4327f1a-bfb09bd8" class="cards_para">A traditional Chinese medicine, Moxibustion is a therapy that consists of burning dried mugwort on particular points of the body. This is often used as a treatment for a wide-range variety of conditions.</p>
         </div>
@@ -521,7 +521,7 @@ drift.load('r73nxaxiv89c');
   </div>
   <div class="footer_section">
     <div class="main_container">
-      <div class="_4_block_row">
+      <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
