--- a/404.html
+++ b/404.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Apr 29 2021 20:20:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat May 01 2021 05:30:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f759b55b643fb59da8baab6" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -63,11 +63,13 @@ drift.load('r73nxaxiv89c');
     </div>
   </div>
   <div class="_404_section">
-    <div class="main_container"></div>
+    <a href="index.html" class="w-inline-block">
+      <div data-w-id="77a070f7-a864-6353-bab7-14d30dcac81c" data-animation-type="lottie" data-src="documents/ryu_404.json" data-loop="1" data-direction="1" data-autoplay="1" data-is-ix2-target="0" data-renderer="svg" data-default-duration="3" data-duration="0" class="lottie-animation-3"></div>
+    </a>
   </div>
   <div class="footer_section">
     <div class="main_container">
-      <div class="_4_block_row">
+      <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
