--- a/conditions-treated.html
+++ b/conditions-treated.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Apr 29 2021 20:20:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat May 01 2021 05:30:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f6eaf5cc7ed7c72d89408ec" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -515,7 +515,7 @@ drift.load('r73nxaxiv89c');
   </div>
   <div class="footer_section">
     <div class="main_container">
-      <div class="_4_block_row">
+      <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
