--- a/services.html
+++ b/services.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Thu Apr 29 2021 20:20:06 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  Last Published: Sat May 01 2021 05:30:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="5f69af5fbdb8715bbbfc9b8e" data-wf-site="5f686908b6be43eb4fb09bd7" lang="en">
 <head>
   <meta charset="utf-8">
@@ -81,15 +81,15 @@ drift.load('r73nxaxiv89c');
       <div class="content-holder">
         <div class="the-content _1">
           <h2 class="services_content_h3">Acupuncture</h2>
-          <p class="services_para">Acupuncture involves the insertion of very thin needles through your skin at strategic points on your body. A key component of traditional Chinese medicine, acupuncture is most commonly used to treat pain. Increasingly, it is being used for overall wellness, including stress management.</p>
-          <p class="services_para">Traditional Chinese medicine explains acupuncture as a technique for balancing the flow of energy or life force — known as chi or qi (chee) — believed to flow through pathways (meridians) in your body. By inserting needles into specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
-          <p class="services_para">In contrast, many Western practitioners view the acupuncture points as places to stimulate nerves, muscles and connective tissue. Some believe that this stimulation boosts your body&#x27;s natural painkillers.<br></p>
+          <p class="services_para">Traditional Chinese Medicine (TCM) defines acupuncture as a technique for balancing chi or qi (chee) - the flow of energy or life force. This energy flows through pathways in your body, known as meridians. By targeting specific points along these meridians, acupuncture practitioners believe that your energy flow will re-balance.</p>
+          <p class="services_para">Essentially, acupuncture is the process of inserting very thin needles through the skin to activate the body&#x27;s natural ability to heal itself. This process is painless and will cause no physical harm, yet will elicit the body into activating a natural healing response. Simultaneously, reactions within the central nervous system, circulatory system and endocrine system help acupuncture deliver strong, lasting effects.</p>
+          <p class="services_para">Acupuncture is recognized by the <a href="https://www.who.int/" class="blue_link">World Health Organization</a> and the <a href="https://www.nccih.nih.gov/health/acupuncture-in-depth" class="blue_link">National Institutes of Health</a> as effecting in treating acute/chronic pain, neurological disorders, respiratory issues, digestive problems, urinary and reproductive health, immune function, ear/eye disorders, depression, anxiety, insomnia and even additions.<br></p>
         </div>
         <div style="opacity:0" class="the-content _2">
           <h2 class="services_content_h3">Traditional Chinese Herbs</h2>
-          <p class="services_para">For centuries, China and other Asian countries have embraced herbal therapy. Now, the West is catching on to the timelessness of this ancient medicine and has started to incorporate Chinese herbs in the treatment of a wide range of health concerns.</p>
-          <p class="services_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
-          <p class="services_para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique. Duis cursus, mi quis viverra ornare, eros dolor interdum nulla, ut commodo diam libero vitae erat. Aenean faucibus nibh et justo cursus id rutrum lorem imperdiet. Nunc ut sem vitae risus tristique posuere.</p>
+          <p class="services_para">For centuries, China and other Asian countries have embraced Chinese Herbal Medicine. It&#x27;s usage and evolution can be found over a span of 2000 years and is the foundation upon which Traditional Chinese Medicine (TCM) is based upon. It has grown to become a powerful tool in regulating the body&#x27;s functions to both treat and prevent illnesses.</p>
+          <p class="services_para">Currently, more than 80% of the Traditional Chinese Medicine treatments in China are herbal. In fact, many of today&#x27;s modern drugs have been created from such herbs. These herbs are rarely used individually, but rather in conjunction with others to create a formula that consists of 2-15 herbs.</p>
+          <p class="services_para">Chinese Herbal Medicine assists in maintaining daily health by balancing the body. It is also highly sought-after as it is effective in treating acute diseases and chronic illnesses. While there are many different forms of herbal medicine, they all address root causes rather than the surface issue that may be being treated.</p>
         </div>
         <div style="opacity:0" class="the-content _3">
           <h2 class="services_content_h3">Cupping</h2>
@@ -187,7 +187,7 @@ drift.load('r73nxaxiv89c');
   </div>
   <div class="footer_section">
     <div class="main_container">
-      <div class="_4_block_row">
+      <div class="_4_block_row_footer">
         <div data-w-id="878de897-29f2-0589-e955-79ee46b4e16c" class="_4_block">
           <h3 class="footer_h3">Ryu Acupuncture Clinic</h3>
           <p class="disclaimer_para">Our mission is to provide a safe, preventative, and synergistic treatment for each unique individual. Alongside communicating with the patient, we strive to formulate a treatment plan to guide you to your journey of balance and systematic restoration.</p>
